[project]
name = "kilngpu"
version = "0.0.1"
description = "An agent that lives on your GPU and adapts its behavior to thermal state"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "cjnpunk" }]
keywords = ["gpu", "agent", "nvml", "thermal", "control-loop"]
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
nvml = ["nvidia-ml-py>=12.0"]
load = ["torch>=2.0"]

[project.scripts]
kilngpu = "kilngpu.cli:main"

[project.urls]
Homepage = "https://github.com/cjnpunk/kilngpu"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kilngpu"]
